cmake_minimum_required(VERSION 3.28)
project(LecPatterns)

set(CMAKE_CXX_STANDARD 20)

add_executable(LecPatterns main.cpp
        Creational/FactoryMethod/Factory.cpp
        Creational/FactoryMethod/Factory.h
        Creational/AbstractFactory/AbstractFactory.cpp
        Creational/AbstractFactory/AbstractFactory.h
        Creational/Builder/Builder.cpp
        Creational/Builder/Builder.h
        Creational/Prototype/Prototype.cpp
        Creational/Prototype/Prototype.h
        Creational/Singleton/Singleton.cpp
        Creational/Singleton/Singleton.h
        Structural/Adapter/Adapter.cpp
        Structural/Adapter/Adapter.h
        Structural/Bridge/Bridge.cpp
        Structural/Bridge/Bridge.h
        Structural/Composite/Composite.cpp
        Structural/Composite/Composite.h
        Structural/Decorator/Decorator.cpp
        Structural/Decorator/Decorator.h
        Structural/Facade/Facade.cpp
        Structural/Facade/Facade.h
        Structural/Flyweight/Flyweight.cpp
        Structural/Flyweight/Flyweight.h
        Structural/Proxy/Proxy.cpp
        Structural/Proxy/Proxy.h
        Behavioral/ChainOfResponsibility/ChainOfResponsibility.cpp
        Behavioral/ChainOfResponsibility/ChainOfResponsibility.h
        Behavioral/Command/Command.cpp
        Behavioral/Command/Command.h
        Behavioral/Iterator/Iterator.cpp
        Behavioral/Iterator/Iterator.h
        Behavioral/Mediator/Mediator.cpp
        Behavioral/Mediator/Mediator.h
        Behavioral/Memento/Memento.cpp
        Behavioral/Memento/Memento.h
        Behavioral/Observer/Observer.cpp
        Behavioral/Observer/Observer.h
        Behavioral/State/State.cpp
        Behavioral/State/State.h
        Behavioral/Strategy/Strategy.cpp
        Behavioral/Strategy/Strategy.h
        Behavioral/TemplateMethod/TemplateMethod.cpp
        Behavioral/TemplateMethod/TemplateMethod.h
        Behavioral/Visitor/Visitor.cpp
        Behavioral/Visitor/Visitor.h)

include_directories(Creational/FactoryMethod
                    Creational/AbstractFactory
                    Creational/Builder
                    Creational/Prototype
                    Creational/Singleton
                    Structural/Adapter
                    Structural/Bridge
                    Structural/Composite
                    Structural/Decorator
                    Structural/Facade
                    Structural/Flyweight
                    Structural/Proxy
                    Behavioral/ChainOfResponsibility
                    Behavioral/Command
                    Behavioral/Iterator
                    Behavioral/Mediator
                    Behavioral/Memento
                    Behavioral/Observer
                    Behavioral/State
                    Behavioral/Strategy
                    Behavioral/TemplateMethod
                    Behavioral/Visitor)
